--- a/pages/login.html
+++ b/pages/login.html
@@ -17,7 +17,8 @@
                 {{ end }}
                 <input type="text" placeholder="login" name="login">
                 <input type="password" placeholder="password" name="password">
-                <button type="submit">log in</button>
+                <h5>New to Social Network? <a href="/register">Create an account.</a></h5>
+                <button type="submit">Log in</button>
             </form>
         </div>
     </div>
