--- a/pages/register.html
+++ b/pages/register.html
@@ -18,6 +18,7 @@
                 <input type="text" placeholder="login" name="login">
                 <input type="password" placeholder="password" name="password">
                 <input type="text" placeholder="name" name="name">
+                <h5>Have account? <a href="/login">Log in.</a></h5>
                 <button type="submit">Sign up</button>
             </form>
         </div>
